--- a/manifest.json
+++ b/manifest.json
@@ -265,7 +265,18 @@
 					"css/m_index.css",
 					"images/s1.png",
 					"images/s3.png",
-					"css/m_common.css"
+					"css/m_common.css",
+					"images/nav-pic5.png",
+					"images/nav-pic1.png",
+					"images/nav-pic3.png",
+					"images/nav-pic6.png",
+					"images/nav-pic4.png",
+					"images/nav-pic2.png",
+					"images/nav-pic7.png",
+					"images/nav-pic8.png",
+					"%7B%%20url%20\u0027activity\u0027%20%%7D",
+					"%7B%%20url%20\u0027information\u0027%20%%7D",
+					"%7B%%20url%20\u0027activity_lottery\u0027%20%%7D"
 				],
 				"refer": [],
 				"priority": 0
@@ -346,7 +357,6 @@
 				"images/bg-4.png",
 				"images/about2.png",
 				"images/01_16.jpg",
-				"images/nav-pic8.png",
 				"images/left-icon3.png",
 				"images/banner-new1.png",
 				"images/box1.png",
@@ -355,12 +365,10 @@
 				"images/pict_94.png",
 				"images/didi.png",
 				"images/ico1.png",
-				"images/nav-pic4.png",
 				"images/pic_03.png",
 				"images/gongzhong.jpg",
 				"images/top-2.png",
 				"images/icon-5.png",
-				"images/nav-pic3.png",
 				"css/zixun-style.css",
 				"images/pict_45.png",
 				"images/i-1.jpg",
@@ -457,7 +465,6 @@
 				"images/choujiang-bottom-02.jpg",
 				"images/top.png",
 				"images/pic_11.png",
-				"images/nav-pic5.png",
 				"images/in-01.png",
 				"js/share.js",
 				"images/my_pic5.gif",
@@ -535,7 +542,6 @@
 				"css/m_account_coupon.css",
 				"images/back03.png",
 				"images/sin-picon-02.png",
-				"images/nav-pic6.png",
 				"images/logo-8.png",
 				"images/login-icon-password.png",
 				"images/cback2.jpg",
@@ -582,7 +588,6 @@
 				"images/ic1.png",
 				"images/yes.png",
 				"images/topimg1.jpg",
-				"images/nav-pic1.png",
 				"css/m_account_welfare.css",
 				"images/juchi.png",
 				"images/pict_100.png",
@@ -734,7 +739,6 @@
 				"images/address.png",
 				"css/m_detail_information.css",
 				"css/m_account_invite.css",
-				"images/nav-pic7.png",
 				"images/Sign.png",
 				"images/img5.png",
 				"images/share-guide-bottom.png",
@@ -757,7 +761,6 @@
 				"images/activity_invite_text03.png",
 				"images/back-si.png",
 				"images/about4.png",
-				"images/nav-pic2.png",
 				"images/01_19.jpg",
 				"css/mui.css",
 				"js/mui.enterfocus.js",
