--- a/manifest.json
+++ b/manifest.json
@@ -205,7 +205,9 @@
 					"m_welfare.html",
 					"js/mui.min.js",
 					"fonts/mui.ttf",
-					"css/mui.min.css"
+					"css/mui.min.css",
+					"js/app.js",
+					"m_welfare_main.html"
 				],
 				"refer": [
 					"m_task.html",
@@ -276,7 +278,11 @@
 					"images/nav-pic8.png",
 					"%7B%%20url%20\u0027activity\u0027%20%%7D",
 					"%7B%%20url%20\u0027information\u0027%20%%7D",
-					"%7B%%20url%20\u0027activity_lottery\u0027%20%%7D"
+					"%7B%%20url%20\u0027activity_lottery\u0027%20%%7D",
+					"js/news.js",
+					"js/html5sql.js",
+					"js/feed.js",
+					"js/app.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -291,7 +297,31 @@
 					"%7B%%20static%20\u0027images/nav1.png\u0027%20%%7D",
 					"%7B%%20static%20\u0027css/m_account_index.css\u0027%20%%7D",
 					"%7B%%20static%20\u0027images/nav3.png\u0027%20%%7D",
-					"%7B%%20static%20\u0027css/mui.min.css\u0027%20%%7D"
+					"%7B%%20static%20\u0027css/mui.min.css\u0027%20%%7D",
+					"images/sin-picon-02.png",
+					"images/nav1.png",
+					"fonts/mui.ttf",
+					"images/sin-picon-07.png",
+					"images/nav2.png",
+					"images/nav4s.png",
+					"images/sin-picon-03.jpg",
+					"css/m_account_index.css",
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"images/bg-user.png",
+					"images/nav3.png",
+					"images/sin-picon-05.jpg",
+					"images/sin-picon-04.jpg",
+					"images/pen.png",
+					"images/sin-picon-06.jpg",
+					"css/m_common.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"m_welfare_main.html": {
+				"resources": [
+					"m_welfare_pullfresh.html"
 				],
 				"refer": [],
 				"priority": 0
@@ -314,7 +344,6 @@
 				"images/invited-reg-bg.png",
 				"images/choujiang-zhuanpan.png",
 				"css/activity.css",
-				"js/app.js",
 				"images/news-left-icon.png",
 				"css/welfare.css",
 				"images/ico8.png",
@@ -409,7 +438,6 @@
 				"images/new_cont.png",
 				"images/bg-youhuiquan.png",
 				"images/01_14.jpg",
-				"css/m_account_index.css",
 				"images/img4.png",
 				"images/youhuiquan-icon.jpg",
 				"images/diannao.png",
@@ -452,7 +480,6 @@
 				"images/bg-manage-01.png",
 				"images/iconew.png",
 				"js/jquery.roundabout-1.0.min.js",
-				"images/bg-user.png",
 				"images/back04.png",
 				"images/left-icon1.png",
 				"images/make-money-zhongfuli.jpg",
@@ -541,7 +568,6 @@
 				"images/user-04.png",
 				"css/m_account_coupon.css",
 				"images/back03.png",
-				"images/sin-picon-02.png",
 				"images/logo-8.png",
 				"images/login-icon-password.png",
 				"images/cback2.jpg",
@@ -551,9 +577,7 @@
 				"images/logo.jpg",
 				"js/page.js",
 				"images/submit.png",
-				"images/nav3.png",
 				"images/bge-5.png",
-				"images/sin-picon-06.jpg",
 				"images/head.png",
 				"images/bg-11.png",
 				"images/pic5.png",
@@ -606,7 +630,6 @@
 				"images/make-money-bg.png",
 				"js/draggabilly.pkgd.min.js",
 				"images/about3.png",
-				"images/sin-picon-03.jpg",
 				"images/bg-10.png",
 				"js/accounts/cookie.js",
 				"images/nav-4.png",
@@ -621,7 +644,6 @@
 				"css/m_account_score.css",
 				"images/bg-02.png",
 				"images/logo-5.png",
-				"images/nav4s.png",
 				"images/window.png",
 				"images/iphone.png",
 				"images/share-white.png",
@@ -646,13 +668,10 @@
 				"js/hashtabber.js",
 				"images/bg-logo.png",
 				"images/bg-3.jpg",
-				"images/nav2.png",
 				"images/youhuiquan-bg.png",
 				"images/today-03.jpg",
 				"images/banner1.jpg",
 				"images/bg-no.png",
-				"images/sin-picon-05.jpg",
-				"images/pen.png",
 				"images/img3.png",
 				"images/jf-out-02.png",
 				"images/bg-03.png",
@@ -676,7 +695,6 @@
 				"css/m_detail_press.css",
 				"js/accounts/jquery.blockUI.js",
 				"css/m_expsubmit.css",
-				"images/sin-picon-04.jpg",
 				"images/back1.png",
 				"images/contpic1.png",
 				"images/lottery.png",
@@ -718,7 +736,6 @@
 				"images/bg-yes.png",
 				"js/mui.pullToRefresh.js",
 				"images/about01.png",
-				"images/nav1.png",
 				"images/pic_05.png",
 				"images/bg-6.png",
 				"images/logo-2.png",
@@ -780,7 +797,6 @@
 				"images/sin-picon-v.png",
 				"images/Icon.png",
 				"images/task-05.png",
-				"images/sin-picon-07.png",
 				"images/diannao .png",
 				"images/invited-reg-btn.png",
 				"images/newimg2.png",
