--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,10 @@
 {
-	"@platforms": ["android", "iPhone", "iPad"],
-	"id": "",/*应用的标识，创建应用时自动生成，勿手动修改*/
+	"@platforms": [
+		"android",
+		"iPhone",
+		"iPad"
+	],
+	"id": "H5139D07C",/*应用的标识，创建应用时自动生成，勿手动修改*/
 	"name": "APP",/*应用名称，程序桌面图标名称*/
 	"version": {
 		"name": "1.0.0",/*应用版本名称*/
@@ -18,95 +22,96 @@
 	},
 	"permissions": {
 		"Accelerometer": {
-            "description": "访问加速度感应器"
-        },
-        "Audio": {
-            "description": "访问麦克风"
-        },
-        "Cache": {
-            "description": "管理应用缓存"
-        },
-        "Camera": {
-            "description": "访问摄像头"
-        },
-        "Console": {
-            "description": "跟踪调试输出日志"
-        },
-        "Contacts": {
-            "description": "访问系统联系人信息"
-        },
-        "Device": {
-            "description": "访问设备信息"
-        },
-        "Downloader": {
-            "description": "文件下载管理"
-        },
-        "Events": {
-            "description": "应用扩展事件"
-        },
-        "File": {
-            "description": "访问本地文件系统"
-        },
-        "Gallery": {
-            "description": "访问系统相册"
-        },
-        "Geolocation": {
-            "description": "访问位置信息"
-        },
-         "Invocation": {
-            "description": "使用Native.js能力"
-        },
-        "Messaging": {
-            "description": "访问通讯能力"
-        },
-        "Orientation": {
-            "description": "访问方向感应器"
-        },
-        "Proximity": {
-            "description": "访问距离感应器"
-        },
-        "Storage": {
-            "description": "管理应用本地数据"
-        },
-        
-        "Uploader": {
-            "description": "管理文件上传任务"
-        },
-        "Runtime": {
-            "description": "访问运行期环境"
-        },
-        "XMLHttpRequest": {
-            "description": "跨域网络访问"
-        },
-        "Zip": {
-            "description": "文件压缩与解压缩"
-        },
-        "Barcode": {
-            "description": "管理二维码扫描插件"
-        },
-        "Maps": {
-            "description": "管理地图插件"
-        },
-        "Speech": {
-            "description": "管理语音识别插件"
-        },
-        "Webview":{
-        	"description": "窗口管理"
-        },
-        "NativeUI":{
-        	"description": "原生UI控件"
-        },
-        "Navigator":{
-        	"description": "浏览器信息"
-        },
-        "NativeObj":{
-        	"description": "原生对象"
-        }
+			"description": "访问加速度感应器"
+		},
+		"Audio": {
+			"description": "访问麦克风"
+		},
+		"Cache": {
+			"description": "管理应用缓存"
+		},
+		"Camera": {
+			"description": "访问摄像头"
+		},
+		"Console": {
+			"description": "跟踪调试输出日志"
+		},
+		"Contacts": {
+			"description": "访问系统联系人信息"
+		},
+		"Device": {
+			"description": "访问设备信息"
+		},
+		"Downloader": {
+			"description": "文件下载管理"
+		},
+		"Events": {
+			"description": "应用扩展事件"
+		},
+		"File": {
+			"description": "访问本地文件系统"
+		},
+		"Gallery": {
+			"description": "访问系统相册"
+		},
+		"Geolocation": {
+			"description": "访问位置信息"
+		},
+		"Invocation": {
+			"description": "使用Native.js能力"
+		},
+		"Messaging": {
+			"description": "访问通讯能力"
+		},
+		"Orientation": {
+			"description": "访问方向感应器"
+		},
+		"Proximity": {
+			"description": "访问距离感应器"
+		},
+		"Storage": {
+			"description": "管理应用本地数据"
+		},
+
+		"Uploader": {
+			"description": "管理文件上传任务"
+		},
+		"Runtime": {
+			"description": "访问运行期环境"
+		},
+		"XMLHttpRequest": {
+			"description": "跨域网络访问"
+		},
+		"Zip": {
+			"description": "文件压缩与解压缩"
+		},
+		"Barcode": {
+			"description": "管理二维码扫描插件"
+		},
+		"Maps": {
+			"description": "管理地图插件"
+		},
+		"Speech": {
+			"description": "管理语音识别插件"
+		},
+		"Webview": {
+			"description": "窗口管理"
+		},
+		"NativeUI": {
+			"description": "原生UI控件"
+		},
+		"Navigator": {
+			"description": "浏览器信息"
+		},
+		"NativeObj": {
+			"description": "原生对象"
+		}
 	},
 	"plus": {
 		"splashscreen": {
 			"autoclose": true,/*是否自动关闭程序启动界面，true表示应用加载应用入口页面后自动关闭；false则需调plus.navigator.closeSplashscreen()关闭*/
-			"waiting": true
+			"waiting": true,
+			"delay": "0"
 		},
 		"runmode": "liberate",/*应用的首次启动运行模式，可取liberate或normal，liberate模式在第一次启动时将解压应用资源（Android平台File API才可正常访问_www目录）*/
 		"signature": "Sk9JTiBVUyBtYWlsdG86aHIyMDEzQGRjbG91ZC5pbw==",/*可选，保留给应用签名，暂不使用*/
@@ -124,9 +129,37 @@
 				"keystore": "",/*Android应用打包使用的密钥库文件*/
 				"password": "",/*Android应用打包使用密钥库中证书的密码*/
 				"aliasname": "",/*Android应用打包使用密钥库中证书的别名*/
-				"permissions": ["<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>","<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>","<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>","<uses-permission android:name=\"android.permission.VIBRATE\"/>","<uses-permission android:name=\"android.permission.READ_LOGS\"/>","<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>","<uses-feature android:name=\"android.hardware.camera.autofocus\"/>","<uses-permission android:name=\"android.permission.WRITE_CONTACTS\"/>","<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>","<uses-permission android:name=\"com.android.launcher.permission.UNINSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.CAMERA\"/>","<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>","<uses-permission android:name=\"android.permission.RECORD_AUDIO\"/>","<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>","<uses-permission android:name=\"com.android.launcher.permission.INSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>","<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>","<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>","<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>","<uses-permission android:name=\"android.permission.CALL_PHONE\"/>","<uses-permission android:name=\"android.permission.ACCESS_COARSE_LOCATION\"/>","<uses-feature android:name=\"android.hardware.camera\"/>","<uses-permission android:name=\"android.permission.ACCESS_FINE_LOCATION\"/>","<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"]
+				"permissions": [
+					"<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
+					"<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
+					"<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>",
+					"<uses-permission android:name=\"android.permission.VIBRATE\"/>",
+					"<uses-permission android:name=\"android.permission.READ_LOGS\"/>",
+					"<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>",
+					"<uses-feature android:name=\"android.hardware.camera.autofocus\"/>",
+					"<uses-permission android:name=\"android.permission.WRITE_CONTACTS\"/>",
+					"<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>",
+					"<uses-permission android:name=\"com.android.launcher.permission.UNINSTALL_SHORTCUT\"/>",
+					"<uses-permission android:name=\"android.permission.CAMERA\"/>",
+					"<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>",
+					"<uses-permission android:name=\"android.permission.RECORD_AUDIO\"/>",
+					"<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>",
+					"<uses-permission android:name=\"com.android.launcher.permission.INSTALL_SHORTCUT\"/>",
+					"<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>",
+					"<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>",
+					"<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>",
+					"<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>",
+					"<uses-permission android:name=\"android.permission.CALL_PHONE\"/>",
+					"<uses-permission android:name=\"android.permission.ACCESS_COARSE_LOCATION\"/>",
+					"<uses-feature android:name=\"android.hardware.camera\"/>",
+					"<uses-permission android:name=\"android.permission.ACCESS_FINE_LOCATION\"/>",
+					"<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
+				]
 			},
-			"orientation": ["portrait-primary", "portrait-secondary"],/*应用支持的方向，portrait-primary：竖屏正方向；portrait-secondary：竖屏反方向；landscape-primary：横屏正方向；landscape-secondary：横屏反方向*/
+			"orientation": [
+				"portrait-primary",
+				"portrait-secondary"
+			],/*应用支持的方向，portrait-primary：竖屏正方向；portrait-secondary：竖屏反方向；landscape-primary：横屏正方向；landscape-secondary：横屏反方向*/
 			"icons": {
 				"ios": {
 					"prerendered": true, /*应用图标是否已经高亮处理，在iOS6及以下设备上有效*/
@@ -184,8 +217,8 @@
 					"mdpi": "", /*普通屏启动图片，分辨率：240x282*/
 					"ldpi": "", /*大屏启动图片，分辨率：320x442*/
 					"hdpi": "", /*高分屏启动图片，分辨率：480x762*/
-					"xhdpi": "", /*720P高分屏启动图片，分辨率：720x1242*/
-					"xxhdpi": ""
+					"xhdpi": "C:/Users/lch/Desktop/splash2.png", /*720P高分屏启动图片，分辨率：720x1242*/
+					"xxhdpi": "C:/Users/lch/Desktop/splash2.png"
 				}
 			}
 		}
@@ -212,7 +245,9 @@
 				"refer": [
 					"m_task.html",
 					"m_finance.html",
-					"m_account_index.html"
+					"m_account_index.html",
+					"m_finance_main.html",
+					"m_task_main.html"
 				],
 				"priority": 0
 			},
@@ -282,7 +317,11 @@
 					"js/news.js",
 					"js/html5sql.js",
 					"js/feed.js",
-					"js/app.js"
+					"js/app.js",
+					"js/mui.js",
+					"js/mui.pullToRefresh.js",
+					"js/mui.pullToRefresh.material.js",
+					"images/blank.jpg"
 				],
 				"refer": [],
 				"priority": 0
@@ -322,6 +361,46 @@
 			"m_welfare_main.html": {
 				"resources": [
 					"m_welfare_pullfresh.html"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"m_task_main.html": {
+				"resources": [
+					"%7B%static%20\u0027images/nav3.png\u0027%%7D",
+					"%7B%static%20\u0027css/m_task.css\u0027%%7D",
+					"%7B%static%20\u0027images/nav2s.png\u0027%%7D"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"m_finance_main.html": {
+				"resources": [
+					"%7B%static%20\u0027images/nav3s.png\u0027%%7D",
+					"%7B%static%20\u0027js/mui.min.js\u0027%%7D",
+					"%7B%static%20\u0027images/nav4.png\u0027%%7D",
+					"%7B%static%20\u0027images/diannao.png\u0027%%7D",
+					"%7B%static%20\u0027images/logo.png\u0027%%7D",
+					"%7B%static%20\u0027js/mui.pullToRefresh.material.js\u0027%%7D",
+					"%7B%static%20\u0027css/m_finance.css\u0027%%7D",
+					"%7B%static%20\u0027css/mui.min.css\u0027%%7D",
+					"%7B%static%20\u0027js/mui.pullToRefresh.js\u0027%%7D",
+					"%7B%static%20\u0027images/nav2.png\u0027%%7D",
+					"%7B%static%20\u0027images/nav1.png\u0027%%7D",
+					"%7B%static%20\u0027css/m_common.css\u0027%%7D",
+					"js/mui.pullToRefresh.js",
+					"js/mui.pullToRefresh.material.js",
+					"images/nav1.png",
+					"images/nav2.png",
+					"images/nav4.png",
+					"images/logo.png",
+					"js/mui.min.js",
+					"images/diannao.png",
+					"%7B%%20url%20\u0027finance_json\u0027%20%%7D",
+					"css/m_finance.css",
+					"css/mui.min.css",
+					"images/nav3s.png",
+					"css/m_common.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -375,7 +454,6 @@
 				"images/i_logo5.png",
 				"images/iconfont-tianjia.png",
 				"images/icon-1.jpg",
-				"images/logo.png",
 				"images/i-3.jpg",
 				"images/newtitle1.png",
 				"css/m_baoyou.css",
@@ -407,7 +485,6 @@
 				"images/01_07.jpg",
 				"images/pic1.png",
 				"images/choujiang-middle.jpg",
-				"css/m_finance.css",
 				"images/i277x148-3.jpg",
 				"images/sin-picon-04.png",
 				"images/bg-51.png",
@@ -440,7 +517,6 @@
 				"images/01_14.jpg",
 				"images/img4.png",
 				"images/youhuiquan-icon.jpg",
-				"images/diannao.png",
 				"images/favicon.ico",
 				"images/img1.png",
 				"images/pic3.png",
@@ -457,9 +533,7 @@
 				"images/img4.jpg",
 				"css/m_detail_hongbao.css",
 				"images/jf03.png",
-				"images/nav3s.png",
 				"images/contpic2.png",
-				"js/mui.js",
 				"images/in-02.png",
 				"images/login-icon-msg.png",
 				"images/boxback.png",
@@ -657,7 +731,6 @@
 				"images/bg-every.png",
 				"images/code.jpg",
 				"css/m_account_exchange.css",
-				"js/mui.pullToRefresh.material.js",
 				"js/new_file.html",
 				"images/phone.png",
 				"images/yzm.png",
@@ -689,7 +762,6 @@
 				"images/share-tqq.png",
 				"css/commodity.css",
 				"images/understand-finacing.png",
-				"images/nav4.png",
 				"images/icon-1.gif",
 				"images/understand-free.png",
 				"css/m_detail_press.css",
@@ -734,7 +806,6 @@
 				"images/bottom-02.png",
 				"images/bg-money.png",
 				"images/bg-yes.png",
-				"js/mui.pullToRefresh.js",
 				"images/about01.png",
 				"images/pic_05.png",
 				"images/bg-6.png",
