--- a/manifest.json
+++ b/manifest.json
@@ -269,9 +269,13 @@
 					"css/m_common.css",
 					"js/mui.min.js",
 					"images/task-right-bg.png",
-					"css/mui.min.css"
+					"css/mui.min.css",
+					"m_task_junior.html"
 				],
-				"refer": [],
+				"refer": [
+					"m_task_middle.html",
+					"m_task_senior.html"
+				],
 				"priority": 0
 			},
 			"m_finance.html": {
@@ -525,6 +529,28 @@
 					"fonts/mui.ttf",
 					"css/mui.min.css",
 					"css/m_common.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"m_task_junior.html": {
+				"resources": [
+					"js/mui.pullToRefresh.js",
+					"js/mui.min.js",
+					"js/mui.pullToRefresh.material.js",
+					"css/m_task.css",
+					"css/mui.min.css",
+					"css/m_common.css",
+					"images/task-right-bg.png"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"m_task_senior.html": {
+				"resources": [
+					"js/mui.pullToRefresh.js",
+					"js/mui.pullToRefresh.material.js",
+					"images/task-right-bg.png"
 				],
 				"refer": [],
 				"priority": 0
