--- a/manifest.json
+++ b/manifest.json
@@ -294,7 +294,8 @@
 					"%7B%static%20\u0027images/nav1.png\u0027%%7D",
 					"%7B%static%20\u0027css/m_common.css\u0027%%7D",
 					"m_finance_sub1.html",
-					"css/m_task.css"
+					"css/m_task.css",
+					"css/m_common.css"
 				],
 				"refer": [
 					"m_finance_sub3.html",
@@ -593,6 +594,13 @@
 				"resources": [
 					"css/m_finance.css",
 					"css/m_common.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"m_finance_sub2.html": {
+				"resources": [
+					"css/m_finance.css"
 				],
 				"refer": [],
 				"priority": 0
