--- a/manifest.json
+++ b/manifest.json
@@ -344,7 +344,13 @@
 					"m_detail_hongbao.html",
 					"template.html",
 					"m_detail_welfare.html",
-					"browser.html"
+					"browser.html",
+					"account/m_account_score.html",
+					"account/m_account_charge.html",
+					"account/m_account_welfare.html",
+					"html/m_activity.html",
+					"account/m_account_coupon.html",
+					"account/m_strategy.html"
 				],
 				"priority": 0
 			},
@@ -872,11 +878,33 @@
 					"images/user-01.png",
 					"images/user.png",
 					"images/bg-yes.png",
-					"images/user-03.png"
+					"images/user-03.png",
+					"html/m_activity.html"
 				],
 				"refer": [
 					"a_login.html"
 				],
+				"priority": 0
+			},
+			"html/m_activity.html": {
+				"resources": [
+					"css/m_activity.css",
+					"images/make-money-bg.png",
+					"js/elastiStack.js",
+					"js/draggabilly.pkgd.min.js",
+					"html/%7B%%20static%20\u0027images/make-money-zhongfuli.jpg\u0027%20%%7D",
+					"js/modernizr.custom-02.js",
+					"html/%7B%%20static%20\u0027images/make-money-new-user.png\u0027%20%%7D",
+					"fonts/mui.ttf",
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"images/make-money-new-user.png",
+					"js/share.js",
+					"fonts/wafuli-iconfont.woff",
+					"images/make-money-zhongfuli.jpg",
+					"css/m_common.css"
+				],
+				"refer": [],
 				"priority": 0
 			}
 		},
@@ -1021,7 +1049,6 @@
 				"js/jquery.roundabout-1.0.min.js",
 				"images/back04.png",
 				"images/left-icon1.png",
-				"images/make-money-zhongfuli.jpg",
 				"css/m_freshman_introduction.css",
 				"js/awardrotate.js",
 				"images/pic7.png",
@@ -1118,7 +1145,6 @@
 				"images/ico_checkbox.jpg",
 				"images/understand-finacing-btn.png",
 				"css/m_aboutus.css",
-				"images/make-money-new-user.png",
 				"images/newtitle2.png",
 				"images/box2.jpg",
 				"images/bg-52.png",
@@ -1152,8 +1178,6 @@
 				"js/modernizr.custom.js",
 				"images/back2.png",
 				"css/login.css",
-				"images/make-money-bg.png",
-				"js/draggabilly.pkgd.min.js",
 				"images/about3.png",
 				"images/bg-10.png",
 				"js/accounts/cookie.js",
@@ -1164,7 +1188,6 @@
 				"images/jiantou.png",
 				"images/i-11.jpg",
 				"images/new3.png",
-				"css/m_activity.css",
 				"js/page.min.js",
 				"images/bg-02.png",
 				"images/logo-5.png",
@@ -1274,7 +1297,6 @@
 				"images/i277x148-2.jpg",
 				"images/i-13.jpg",
 				"css/lottery.css",
-				"js/modernizr.custom-02.js",
 				"images/qihoo.png",
 				"images/icon-1.png",
 				"images/bg-12.png",
@@ -1323,7 +1345,6 @@
 				"images/01_20.jpg",
 				"images/i_logo6.png",
 				"images/headinfo.png",
-				"js/elastiStack.js",
 				"images/x-botin.png",
 				"images/numberg2.png",
 				"images/首页.jpg",
